Closes-Bug: #1691656 -- In the Networking dashboard, the networking paths are not visible in ie11.
1)Monitor > Networking > Dashboard - Networking paths are not visible in IE11
2)Unnecessary scrollbars for the charts are seen in Monitor Infrastructure pages.

--- a/webroot/common/ui/scss/contrail.custom.scss
+++ b/webroot/common/ui/scss/contrail.custom.scss
@@ -2311,3 +2311,9 @@ div#alarms-event-drops .grid-stack-item-content {
 .collection-label{
     font-size:13px;
     margin:0px;}
+/*ie10 and ie11 specific styles*/
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+#networking-graph svg:not(:root), .stacked-area-chart-container svg:not(:root){
+    overflow:auto;}
+.grid-stack > .grid-stack-item > .grid-stack-item-content, .custom-grid-stack .custom-grid-stack-item, .grid-stack-item-content{overflow:visible;}
+    }
